--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -8,19 +8,13 @@
                 <input type="hidden" id="order_by" name="order_by" value="{{conventions.order_by}}">
                 <input type="hidden" id="page" name="page" value="{{conventions.page}}">
                 <div class="fr-grid-row fr-grid-row--gutters">
-                    <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                        <label class="fr-label" for="search_input">
-                            Nom, numéro de décision, code postal ou ville de l'opération
-                        </label>
-                        <input class="fr-input" placeholder="Rechercher" type="search" id="search_input" name="search_input" value="{{conventions.search_input}}">
+                    <div class="fr-col-12 fr-col-md-12 fr-col-lg-4 fr-mb-2w">
+                        <input class="fr-input" placeholder="par nom, code d’opération ou ville" type="search" id="search_input" name="search_input" value="{{conventions.search_input}}">
                     </div>
                     <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
                         <div class="fr-select-group">
-                            <label class="fr-label" for="cstatut">
-                                Statut de la convention
-                            </label>
                             <select class="fr-select" id="cstatut" name="cstatut">
-                                <option value="">Tous les statuts</option>
+                                <option value="">Statut</option>
                                 {% for statut in statuts %}
                                     <option value="{{statut.value}}"
                                         {% if statut.value  == conventions.statut_filter %}selected{% endif %}>
@@ -32,11 +26,9 @@
                     </div>
                     <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
                         <div class="fr-select-group">
-                            <label class="fr-label" for="financement">
-                                Type de financement
-                            </label>
+
                             <select class="fr-select" name="financement">
-                                <option value="">Tous les financements</option>
+                                <option value="">Financement</option>
                                 {% for financement in financements %}
                                     <option value="{{financement.value}}"
                                         {% if financement.value  == conventions.financement_filter %}selected{% endif %}>
@@ -45,6 +37,10 @@
                                 {% endfor %}
                             </select>
                         </div>
+                    </div>
+                    <div class="fr-col-1">
+                        <button class="fr-btn fr-fi-search-line" title="Rechercher" id="search_btn">
+                        </button>
                     </div>
                 </div>
                 {% if request.user.is_staff %}
@@ -62,117 +58,92 @@
                         </div>
                     </div>
                 {% endif %}
-
-                <div class="fr-col-12 fr-grid-row fr-grid-row--right">
-                    <button class="fr-btn fr-fi-search-line fr-btn--icon-left fr-mt-1w" title="Rechercher" id="search_btn">
-                        Rechercher dans les conventions existantes
-                    </button>
-                </div>
             </form>
-
-            {% if conventions.paginated_conventions %}
-                <div class="fr-table fr-table--bordered table--layout-fixed">
-                    <table>
-                        {% if conventions.paginated_conventions.paginator.count != conventions.total_conventions %}
-                            <caption><em>{{ conventions.paginated_conventions.paginator.count }} convention{{ conventions.paginated_conventions.paginator.count|pluralize }} correspondent à votre recherche</em></caption>
-                        {% endif %}
-                        <thead>
-                            <tr class="th_inline">
-                                <th title="Statut de la convention" scope="col">
-                                    Statut
-                                </th>
-                                {% if request|is_instructeur %}
-                                    <th scope="col" class="th_inline">
-                                        Bailleur
-                                        {% include "common/table/display_order_icon.html" with order_by=conventions.order_by order_by_column='bailleur__nom' url_target='conventions:index' %}
-                                    </th>
-                                {% endif %}
-                                {% if request|display_administration %}
-                                    <th scope="col" class="th_inline">
-                                        Instructeur
-                                        {% include "common/table/display_order_icon.html" with order_by=conventions.order_by order_by_column='programme__administration__nom' url_target='conventions:index' %}
-                                    </th>
-                                {% endif %}
-                                <th title="Numéro de décision" scope="col">
-                                    Numéro
-                                    {% include "common/table/display_order_icon.html" with order_by=conventions.order_by order_by_column='programme__numero_galion' url_target='conventions:index' %}
-                                </th>
-                                <th title="Date de livraison et mise en service" scope="col">
-                                    Livraison
-                                    {% include "common/table/display_order_icon.html" with order_by=conventions.order_by order_by_column='programme__date_achevement_compile' url_target='conventions:index' %}
-                                </th>
-                                <th title="Nom de l'opération" scope="col">
-                                    Opération
-                                    {% include "common/table/display_order_icon.html" with order_by=conventions.order_by order_by_column='programme__nom' url_target='conventions:index' %}
-                                </th>
-                                <th title="Financement" scope="col">
-                                    Fin.
-                                    {% include "common/table/display_order_icon.html" with order_by=conventions.order_by order_by_column='lot__financement' url_target='conventions:index' %}
-                                </th>
-                                <th title="Code postal" scope="col">
-                                    CP
-                                    {% include "common/table/display_order_icon.html" with order_by=conventions.order_by order_by_column='programme__code_postal' url_target='conventions:index' %}
-                                </th>
-                                <th title="Ville" scope="col">
-                                    Ville
-                                    {% include "common/table/display_order_icon.html" with order_by=conventions.order_by order_by_column='programme__ville' url_target='conventions:index' %}
-                                </th>
-                                <th title="Nombre de logements à conventionner" scope="col">
-                                    Nb Lgts
-                                    {% include "common/table/display_order_icon.html" with order_by=conventions.order_by order_by_column='lot__nb_logements' url_target='conventions:index' %}
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for convention in conventions.paginated_conventions %}
-
-                                <tr id="convention_redirect_{{convention.uuid}}" class="clickable {% if convention.display_options.display_redirect_sent %}sent{% elif convention.display_options.display_redirect_post_action %}signed{% endif %}">
-                                    <td title="{{convention.statut_for_template.statut_display}}">
-                                        <div class="fr-p-1w apilos-colored_status apilos-colored_status--{{convention.statut_for_template.key_statut}}">
-                                            <span><strong>
-                                                {{convention.short_statut_for_template}}
-                                            </strong></span>
-                                        </div>
-                                        <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                                            document.addEventListener('DOMContentLoaded', function () {
-                                                document.getElementById('convention_redirect_{{convention.uuid}}').addEventListener('click', function(){
-                                                    if (this.classList.contains("sent")) {
-                                                        location.href="{% url 'conventions:sent' convention_uuid=convention.uuid %}"
-                                                    }
-                                                    else if (this.classList.contains("signed")) {
-                                                        location.href="{% url 'conventions:post_action' convention_uuid=convention.uuid %}"
-                                                    }
-                                                    else {
-                                                        location.href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}"
-                                                    }
-                                                });
-                                            });
-                                        </script>
-                                    </td>
-
-                                    {% if request|is_instructeur %}
-                                        <td>{{convention.bailleur}}</td>
-                                    {% endif %}
-                                    {% if request|display_administration %}
-                                        <td>{{convention.programme.administration}}</td>
-                                    {% endif %}
-                                    <td>{{convention.programme.numero_galion}}</td>
-                                    <td>{{convention.programme.date_achevement_compile|date:"d/m/Y"|default_if_none:'-' }}</td>
-                                    <td>{{convention.programme.nom}}</td>
-                                    <td>{{convention.financement}}</td>
-                                    <td>{{convention.programme.code_postal}}</td>
-                                    <td>{{convention.programme.ville}}</td>
-                                    <td>{{convention.lot.nb_logements}}</td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-                {% include 'common/table/pagination.html' with paginate_list=conventions.paginated_conventions %}
-
-            {% else %}
-                <p>Aucune convention ne correspond à votre recherche...</p>
-            {% endif %}
         </div>
     </div>
 </div>
+<div class="fr-container-fluid ds_banner">
+    <div class="fr-container fr-py-3w">
+        <div class="fr-grid-row fr-grid-row--gutters fr-card fr-card--no-border">
+            <div class="fr-col-md-12 ">
+                {% if conventions.paginated_conventions %}
+                    <div class="fr-table fr-table--bordered table--layout-fixed">
+                        <table>
+                            {% if conventions.paginated_conventions.paginator.count != conventions.total_conventions %}
+                                <caption><em>{{ conventions.paginated_conventions.paginator.count }} convention{{ conventions.paginated_conventions.paginator.count|pluralize }} correspondent à votre recherche</em></caption>
+                            {% endif %}
+                            <thead>
+                                <tr class="th_inline">
+                                    <th title="Statut de la convention" scope="col">
+                                        Statut
+                                    </th>
+                                    <th title="Opération" scope="col">
+                                        Opération
+                                    </th>
+                                    <th title="Financement" scope="col">
+                                        Financement
+                                    </th>
+                                    <th title="Ville" scope="col">
+                                        Ville
+                                    </th>
+                                    <th title="Nombre de logements à conventionner" scope="col">
+                                        Logements
+                                    </th>
+                                    <th title="Date de livraison et mise en service" scope="col">
+                                        Livraison
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for convention in conventions.paginated_conventions %}
+
+                                    <tr id="convention_redirect_{{convention.uuid}}" class="clickable {% if convention.display_options.display_redirect_sent %}sent{% elif convention.display_options.display_redirect_post_action %}signed{% endif %}">
+                                        <td title="{{convention.statut_for_template.statut_display}}">
+                                            <span class="fr-p-1w apilos-colored_status apilos-colored_status--{{convention.statut_for_template.key_statut}}">
+                                                <strong>
+                                                    {{convention.short_statut_for_template}}
+                                                </strong>
+                                            </span>
+                                            <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                                                document.addEventListener('DOMContentLoaded', function () {
+                                                    document.getElementById('convention_redirect_{{convention.uuid}}').addEventListener('click', function(){
+                                                        if (this.classList.contains("sent")) {
+                                                            location.href="{% url 'conventions:sent' convention_uuid=convention.uuid %}"
+                                                        }
+                                                        else if (this.classList.contains("signed")) {
+                                                            location.href="{% url 'conventions:post_action' convention_uuid=convention.uuid %}"
+                                                        }
+                                                        else {
+                                                            location.href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}"
+                                                        }
+                                                    });
+                                                });
+                                            </script>
+                                        </td>
+                                        <td>
+                                            <strong>{{convention.programme.nom}}</strong><br/>
+                                            <em>{{convention.programme.numero_galion}}</em>
+                                        </td>
+                                        <td>{{convention.financement}}</td>
+                                        <td>
+                                            <strong>{{convention.programme.ville}}</strong><br/>
+                                            <em>{{convention.programme.code_postal}}</em>
+                                        </td>
+                                        <td>{{convention.lot.nb_logements}}</td>
+                                        <td>{{convention.programme.date_achevement_compile|date:"d F Y"|default_if_none:'-' }}</td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                    {% include 'common/table/pagination.html' with paginate_list=conventions.paginated_conventions %}
+
+                {% else %}
+                    <p>Aucune convention ne correspond à votre recherche...</p>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+</div>
+
+
