Hotfix: avoid creating fake links to convention steps if convention is not saved yet

--- a/templates/common/step_progressbar.html
+++ b/templates/common/step_progressbar.html
@@ -24,6 +24,7 @@
             </div>
         </div>
     </div>
+    {% if convention.uuid is not None %}
     <script type="text/javascript" nonce="{{request.csp_nonce}}">
         document.addEventListener('DOMContentLoaded', function () {
             var lis = document.getElementById('step_progressbar').children
@@ -35,4 +36,5 @@
             }
         });
     </script>
+    {% endif %}
 {% endif %}
