--- a/templates/conventions/common/form_header.html
+++ b/templates/conventions/common/form_header.html
@@ -3,87 +3,80 @@
 {% if convention %}
 
     {% if convention.is_avenant %}
-        <div class='fr-pt-2w'>
-            <div class="fr-container">
-                <div class="fr-col-12">
-                    <div class="fr-grid-row fr-grid-row--gutters">
-                        <div class="fr-col-12">
-                            <div class="fr-py-3w">
-                                <h1 class="fr-h2 apilos-d-inline">{{convention.programme.nom}}</h1>
-                                <span class="apilos-h2-thin"> - Avenant</span>
-                                <div class="fr-py-3w">
-                                    {% if CERBERE_AUTH %}
-                                        <a href="{% url 'programmes:operation_conventions' numero_operation=convention.programme.numero_galion %}">
-                                            Consulter la convention originale
-                                        </a>
-                                    {% else %}
-                                        {% if convention.is_avenant %}
-                                            <a class='fr-link apilos-link' href="{% url 'conventions:post_action' convention_uuid=convention.parent.uuid %}">Consulter la convention originale</a>
-                                        {% else %}
-                                            <a class='fr-link apilos-link' href="{% url 'conventions:post_action' convention_uuid=convention.uuid %}">Consulter la convention originale</a>
-                                        {% endif %}
-                                    {% endif %}
-                                </div>
-                            </div>
-                        </div>
+        <div class="fr-container  fr-pt-2w">
+            <div class="fr-grid-row fr-grid-row--gutters">
+                <div class="fr-col-12 fr-py-3w">
+                    <h1 class="fr-h2 apilos-d-inline">{{convention.programme.nom}}</h1>
+                    <span class="apilos-h2-thin"> - Avenant</span>
+                    <div class="fr-py-3w">
+                        <a class='fr-link apilos-link' href="{% url 'conventions:post_action' convention_uuid=convention.parent.uuid %}">Consulter la convention originale</a>
                     </div>
-                    <hr>
-                    {% if convention.is_avenant %}
-                        <div class="fr-col-12 fr-mb-4w">
-                            <div role="alert" class="fr-alert fr-alert--{{convention.statut_for_template.key_statut}} {% if convention|display_status_projet %}fr-icon-pencil-line{% elif convention|display_demande_correction %}fr-icon-eye-line{% elif convention|display_demande_instruction %}fr-icon-question-answer-line{% elif convention|display_redirect_sent %}fr-icon-draft-line{% elif convention|display_redirect_post_action %}fr-icon-success-line{% endif %}">
-                                {% if convention|display_status_projet %}
-                                    <p class="fr-text--lg">
-                                        Votre avenant est
-                                        <span class="fr-alert__title">
-                                            en projet
-                                        </span>
-                                    </p>
-                                    <p>Complétez ses informations, puis soumettez-le à votre service d’instruction</p>
-                                {% elif convention|display_demande_correction %}
-                                    <p class="fr-text--lg">
-                                        Votre avenant est
-                                        <span class="fr-alert__title">
-                                            en cours d'instruction
-                                        </span>
-                                    </p>
-                                    <p>Il sera prochainement validé ou votre instructeur vous demandera des corrections</p>
-                                {% elif convention|display_demande_instruction %}
-                                    <p class="fr-text--lg">
-                                        Votre avenant est
-                                        <span class="fr-alert__title">
-                                            en attente de corrections
-                                        </span>
-                                    </p>
-                                    <p>Corrigez les demandes de votre instructeur puis soumettez-le à nouveau</p>
-                                {% elif convention|display_redirect_sent %}
-                                    <p class="fr-text--lg">
-                                        Votre avenant est
-                                        <span class="fr-alert__title">
-                                            en attente d'une signature
-                                        </span>
-                                    </p>
-                                    {% if request|is_instructeur %}
-                                        Vous pouvez <a class="fr-link" href="{% url 'conventions:sent' convention_uuid=convention.uuid %}" target="_self" {% if nav_bar_step == "sent" %}aria-current="page"{% endif %}>téléverser l'avenant signé</a>
-                                    {% else %}
-                                        {% if convention.programme.administration.adresse and convention.programme.administration.code_postal and convention.programme.administration.ville %}
-                                            <p>Imprimez-le, signez-le et envoyez le à l'adresse suivante : {{ convention.programme.administration.adresse }} - {{ convention.programme.administration.code_postal }} {{ convention.programme.administration.ville }}</p>
-                                        {% endif %}
-                                    {% endif %}
-                                {% elif convention|display_redirect_post_action %}
-                                    <p class="fr-text--lg">
-                                        Votre avenant est
-                                        <span class="fr-alert__title">
-                                            finalisé !
-                                        </span>
-                                    </p>
-                                    <p>Vous devrez désormais créer un autre avenant si vous souhaitez mettre à jour une information</p>
-                                {% endif %}
-                            </div>
-                        </div>
-
-                    {% endif %}
                 </div>
             </div>
+            <hr>
+            {% if convention.statut == CONVENTION_STATUT.PROJET %}
+                <div role="alert" class="fr-col-12 fr-mb-3w fr-alert fr-alert--{{convention.statut_for_template.key_statut}} fr-icon-pencil-line">
+                    <p class="fr-text--lg">
+                        Votre avenant est
+                        <span class="fr-text--bold">
+                            en projet
+                        </span>
+                    </p>
+                    <p>Complétez ses informations, puis soumettez-le à votre service d’instruction</p>
+                </div>
+            {% endif %}
+            {% if convention.statut == CONVENTION_STATUT.INSTRUCTION %}
+                <div role="alert" class="fr-col-12 fr-mb-3w fr-alert fr-alert--{{convention.statut_for_template.key_statut}} fr-icon-eye-line">
+                    <p class="fr-text--lg">
+                        Votre avenant est
+                        <span class="fr-text--bold">
+                            en cours d'instruction
+                        </span>
+                    </p>
+                    <p>Il sera prochainement validé ou votre instructeur vous demandera des corrections</p>
+                </div>
+            {% endif %}
+            {% if convention.statut == CONVENTION_STATUT.CORRECTION %}
+                <div role="alert" class="fr-col-12 fr-mb-3w fr-alert fr-alert--{{convention.statut_for_template.key_statut}} fr-icon-question-answer-line">
+                    <p class="fr-text--lg">
+                        Votre avenant est
+                        <span class="fr-text--bold">
+                            en attente de corrections
+                        </span>
+                    </p>
+                    <p>Corrigez les demandes de votre instructeur puis soumettez-le à nouveau</p>
+                </div>
+            {% endif %}
+            {% if convention.statut == CONVENTION_STATUT.A_SIGNER %}
+                <div role="alert" class="fr-col-12 fr-mb-3w fr-alert fr-alert--{{convention.statut_for_template.key_statut}} fr-icon-draft-line{">
+                    <p class="fr-text--lg">
+                        Votre avenant est
+                        <span class="fr-text--bold">
+                            en attente d'une signature
+                        </span>
+                    </p>
+                    {% if request|is_instructeur %}
+                        Vous pouvez <a class="fr-link" href="{% url 'conventions:sent' convention_uuid=convention.uuid %}" target="_self" {% if nav_bar_step == "sent" %}aria-current="page"{% endif %}>téléverser l'avenant signé</a>
+                    {% else %}
+                        {% if convention.programme.administration.adresse and convention.programme.administration.code_postal and convention.programme.administration.ville %}
+                            <p>Imprimez-le, signez-le et envoyez le à l'adresse suivante : {{ convention.programme.administration.adresse }} - {{ convention.programme.administration.code_postal }} {{ convention.programme.administration.ville }}</p>
+                        {% endif %}
+                    {% endif %}
+                </div>
+            {% endif %}
+            {% if convention.statut == CONVENTION_STATUT.SIGNEE %}
+                <div role="alert" class="fr-col-12 fr-mb-3w fr-alert fr-alert--{{convention.statut_for_template.key_statut}} fr-icon-success-line">
+                    <p class="fr-text--lg">
+                        Votre avenant est
+                        <span class="fr-text--bold">
+                            finalisé !
+                        </span>
+                    </p>
+                    <p>Vous devrez désormais créer un autre avenant si vous souhaitez mettre à jour une information</p>
+                </div>
+            {% endif %}
+            {% if convention.statut == CONVENTION_STATUT.RESILIEE %}
+            {% endif %}
         </div>
     {% else %}
         <div class='background-contrast-grey950 apilos-sticky apilos-sticky-top fr-pt-2w'>
@@ -182,12 +175,4 @@
             </div>
         </div>
     {% endif %}
-
-
-
-
-
-
-
-
 {% endif %}
