--- a/templates/settings/users.html
+++ b/templates/settings/users.html
@@ -12,6 +12,26 @@
                     {% include 'settings/common/side_menu.html' with active_menu='users' %}
                 </div>
                 <div class='fr-col-12 fr-col-md-8 fr-col-lg-9 fr-pl-md-3w'>
+                    {# Success alert messages #}
+                    {% if messages %}
+                        {% for message in messages %}
+                            {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+                                <div class="fr-alert fr-alert--success">
+                                    <h3 class="fr-alert__title">{{ message.extra_tags }}</h3>
+                                    <p>{{ message.message }}</p>
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+
+                    {% if request.user.is_staff %}
+                    {# Button link to import bailleur users page #}
+                    <div class="fr-grid-row fr-grid-row--right fr-my-3w">
+                        <a class="fr-btn" href="{% url 'settings:import_bailleur_users' %}">
+                            <span class="fr-icon-todo-line fr-mr-1w" aria-hidden="true"></span>Importer un listing utilisateur bailleur
+                        </a>
+                    </div>
+                    {% endif %}
 
                     {% include 'settings/user_list.html' with users=paginated_users %}
 
