--- a/templates/editorial/cgu.html
+++ b/templates/editorial/cgu.html
@@ -204,7 +204,7 @@
                 <p>Nous conservons les données personnelles pour la durée strictement nécessaire à la réalisation des finalités décrites dans les présentes CGU, c’est-à-dire tant que l’Utilisateur poursuit son utilisation du service.</p>
                 <h4>Sous-traitants</h4>
                 <p>Certaines des données sont envoyées à des sous-traitants pour réaliser certaines missions. Le responsable de traitement s'est assuré de la mise en œuvre par ses sous-traitants de garanties adéquates et du respect de conditions strictes de confidentialité, d’usage et de protection des données.</p>
-                <p>Les sociétés Scalingo (hébergeur), Sendinblue (envoi emails) et Mailjet (envoi emails) interviennent en tant que sous-traitants. </p>
+                <p>Les sociétés Scalingo (hébergeur) et Sendinblue (envoi emails) interviennent en tant que sous-traitants. </p>
                 <div class="fr-table fr-p-2w" data-fr-js-table="true">
                     <table class="data-table" data-fr-js-table-element="true">
                         <caption>Table des sous-traitants</caption>
@@ -213,7 +213,6 @@
                                 <th scope="col">Partenaire</th>
                                 <th scope="col">Scalingo</th>
                                 <th scope="col">SendinBlue</th>
-                                <th scope="col">Mailjet</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -221,19 +220,16 @@
                                 <th scope="col">Pays destinataire</th>
                                 <td>France</td>
                                 <td>France</td>
-                                <td>France</td>
                             </tr>
                             <tr>
                                 <th scope="col">Traitement réalisé</th>
                                 <td>Hébergement du site</td>
-                                <td>Envoi de mails et lettres d'information aux utilisateurs</td>
                                 <td>Envoi de mails et lettres d'information aux utilisateurs</td>
                             </tr>
                             <tr>
                                 <th scope="col">Garanties</th>
                                 <td>https://scalingo.com/fr/privacy-policy</td>
                                 <td>https://fr.sendinblue.com/legal/privacypolicy/</td>
-                                <td>https://www.mailjet.com/fr/legal/politique-confidentialite/</td>
                             </tr>
                         </tbody>
                     </table>
